# CMakeSuiteSparse

./: CMakeLists.txt
amd/: CMakeLists.txt
amd/include/suitesparse/: amd.h  amd_internal.h
amd/src/: amd_1.c  amd_2.c  amd_aat.c  amd_control.c  amd_defaults.c  amd_dump.c  amd_info.c  amd_order.c  amd_post_tree.c  amd_postorder.c  amd_preprocess.c  amd_valid.c
btf/: CMakeLists.txt
btf/include/suitesparse/: btf.h  btf_internal.h
btf/src/: btf_maxtrans.c  btf_order.c  btf_strongcomp.c
colamd/: CMakeLists.txt
colamd/include/suitesparse/: colamd.h
colamd/src/: colamd.c
config/: CMakeLists.txt
config/include/suitesparse/: config.h
config/src/: SuiteSparse_config.c  config.c
klu/: CMakeLists.txt
klu/include/suitesparse/: klu.h  klu_internal.h  klu_version.h
klu/src/: klu.c  klu_analyze.c  klu_analyze_given.c  klu_defaults.c  klu_diagnostics.c  klu_dump.c  klu_extract.c  klu_factor.c  klu_free_numeric.c  klu_free_symbolic.c  klu_kernel.c  klu_memory.c  klu_refactor.c  klu_scale.c  klu_solve.c  klu_sort.c  klu_tsolve.c
